--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>HTML Images</title>
+    
   </head>
   <body>
-    <!-- Your code here -->
+   <img src="../Gallery/images/GRP.jpg" alt="">
+   <img src="../Gallery/images/GRP.jpg" alt="This has an alternative text">
+   <img src="../Gallery/images/GRP.jpg" alt="This has alt, title and src" title="hover around the image to get more information about the image">
   </body>
 </html>
